[gd_scene load_steps=3 format=3 uid="uid://byymqcyhon4w"]

[ext_resource type="Script" path="res://Scene/achievement.gd" id="1_hwdwa"]
[ext_resource type="Texture2D" uid="uid://4aaxwnbugkem" path="res://Media/462585862_1448355969411210_28473098532662935_n.png" id="2_ff2ng"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_hwdwa")
metadata/_edit_vertical_guides_ = [28.0]

[node name="Label" type="Label" parent="."]
offset_left = 519.0
offset_top = 7.0
offset_right = 621.0
offset_bottom = 30.0
text = "ACHIEVEMNT
"

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
current_tab = 0

[node name="CRAFTING" type="TabBar" parent="TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="Label3" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 1
offset_left = 149.0
offset_top = 40.0
offset_right = 549.0
offset_bottom = 63.0
text = "Acacia Artisan – Craft something using acacia wood."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label3"]
layout_mode = 0
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label4" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 2
offset_left = 152.0
offset_top = 73.0
offset_right = 548.0
offset_bottom = 96.0
text = "Jungle Crafter – Craft something using jungle wood."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label4"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label5" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 2
offset_left = 34.0
offset_top = 101.0
offset_right = 436.0
offset_bottom = 124.0
text = "Frosted Masterpiece – Craft using frosted oak wood."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label5"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label6" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 2
offset_left = 35.0
offset_top = 141.0
offset_right = 422.0
offset_bottom = 164.0
text = "Oak Enthusiast – Craft something using oak wood."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label6"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label7" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 2
offset_left = 37.0
offset_top = 183.0
offset_right = 355.0
offset_bottom = 206.0
text = "Stone Shaper – Craft a stone tool or item."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label7"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label8" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 41.0
offset_top = -39.5
offset_right = 278.0
offset_bottom = -16.5
grow_vertical = 2
text = "Iron Forge – Craft an iron item."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label8"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label9" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = -88.5
offset_right = 375.0
offset_bottom = -65.5
grow_vertical = 2
text = "Golden Touch – Craft something using gold."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label9"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label10" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 2
offset_left = 45.0
offset_top = 317.0
offset_right = 408.0
offset_bottom = 340.0
text = "Diamond Crafter – Craft an item with diamond."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label10"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label11" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 2
offset_left = 42.0
offset_top = 358.0
offset_right = 352.0
offset_bottom = 381.0
text = "Emerald Engineer – Craft with emeralds."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label11"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label12" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 2
offset_left = 40.0
offset_top = 402.0
offset_right = 375.0
offset_bottom = 425.0
text = "Ruby Radiance – Craft an item using rubies."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label12"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label13" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 2
offset_left = 44.0
offset_top = 446.0
offset_right = 323.0
offset_bottom = 469.0
text = "Topaz Treasures – Craft using topaz."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label13"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="Label14" type="Label" parent="TabContainer/CRAFTING"]
layout_mode = 2
offset_left = 41.0
offset_top = 494.0
offset_right = 462.0
offset_bottom = 517.0
text = "Magma Master – Craft using magma-related materials."

[node name="TextureRect" type="TextureRect" parent="TabContainer/CRAFTING/Label14"]
offset_left = -35.0
offset_top = -6.0
offset_right = -8.0
offset_bottom = 25.0
texture = ExtResource("2_ff2ng")
expand_mode = 1

[node name="COMBAT" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1
